appservices/domain/native-bg/native-bg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: native-bg-active
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: native-bg

---
apiVersion: v1
kind: Service
metadata:
  name: native-bg-preview
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: native-bg
