appservices/domain/native-bg/native-bg-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: native-bg-active
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: native-bg-active.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: native-bg-active
          servicePort: http
        path: /
  tls:
  - hosts:
    - native-bg-active.poc.awx.onl
    secretName: tls-cert-native-bg-active

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: native-bg-preview
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: native-bg-preview.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: native-bg-preview
          servicePort: http
        path: /
  tls:
  - hosts:
    - native-bg-preview.poc.awx.onl
    secretName: tls-cert-native-bg-preview
